<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:hint="@string/add_name" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:hint="@string/add_mail"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/et_telephone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_telephone"
                android:gravity="center_horizontal"
                android:inputType="number" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_password"
                android:gravity="center_horizontal"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/et_repassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_repassword"
                android:gravity="center_horizontal"
                android:inputType="textPassword" />


            <TextView
                android:id="@+id/tv_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:hint="@string/add_gender"
                android:textColorHint="#3F51B5"
                android:textSize="18sp"
                android:textStyle="bold" />


            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >


                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:id="@+id/rb_male"
                    android:hint="@string/male" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:id="@+id/rb_female"
                    android:hint="@string/female" />

            </RadioGroup>

            <TextView
                android:id="@+id/tv_hobbies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:hint="@string/add_hobbies"
                android:textColorHint="#3F51B5"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/cb_swim"
                        android:text="@string/swim"/>

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/cb_run"
                        android:text="@string/run"/>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/cb_dance"
                        android:text="@string/dance"/>


                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/cb_walk"
                        android:text="@string/walk"/>

                </TableRow>


            </TableLayout>

            <TextView
                android:id="@+id/tv_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:hint="@string/add_city"
                android:textColorHint="#3F51B5"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sp_city">

            </Spinner>

            <TextView
                android:id="@+id/tv_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FCFCFC"
                android:gravity="center_horizontal"
                android:hint="@string/add_birthday"
                android:textColorHint="#3F51B5"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bt_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bt_register" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_results"
                android:id="@+id/tv_results"
                android:textSize="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/aiuda"
                android:textSize="15dp" />

        </LinearLayout>


    </ScrollView>




</LinearLayout>